fix: navbar submenu white space

--- a/src/@components/Navbar/Navbar.module.scss
+++ b/src/@components/Navbar/Navbar.module.scss
@@ -60,6 +60,7 @@
   padding: 0 16px;
   font-size: 14px;
   cursor: pointer;
+  white-space: nowrap;
 
   &:hover {
     background-color: $background-color-primary;
